Fixed display on mobile devices

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -9,7 +9,6 @@ body {
 }
 
 h1 {
-    margin-top: 100px;
     font-weight: 400;
     font-size: 2.5rem;
     text-transform: uppercase;
@@ -38,7 +37,6 @@ main {
 #landing-text {
     display: flex;
     flex: 0 1 40vw;
-    height: 100vh;
     justify-content: center;
     align-items: center;
     padding-right: 2rem;
